@@ -1,3 +1,11 @@
+2017-11-20  Bruno Haible  <bruno@clisp.org>
+
+	Revert introduction of installed program 'clisp!' (no longer needed).
+	* _clisp.c: Don't test SHEBANG_SUPPORT.
+	* _distmakefile: Don't install 'clisp!'.
+	* makemake.in: Likewise.
+	* NEWS: Bug#699 is fixed without breaking backward compatibility.
+
 2017-11-19  Bruno Haible  <bruno@clisp.org>
 
 	Make it easier to test the optimizations in arilev0.d and ari*.d.
